Tue Jul 13 11:22:49 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/Alt_Mapping/ub_struct_seq.cpp:
        
          Changes corresponding to changes in generated code for
          sequences (in this test represented by std::vector<>).

Mon Jul 12 12:55:55 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/PortableServer/PS_ForwardS.h:
        
          New file, an empty placeholder that is now generated as
          an include by the IDL compiler. The corresponding IDL
          file is not automatically processed, but it is included
          in other IDL files.

Mon Jul 12 11:32:30 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/fe/y.tab.cpp:
        * TAO_IDL/fe/fe_init.cpp:
        * TAO_IDL/fe/idl.yy:
        * TAO_IDL/util/utl_scope.cpp:
        
          Changes in handling of pseudo object creation and lookup.

Mon Jul 12 08:26:24 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tools/IDL3_to_IDL2/be_util.cpp:
        * tools/IDL3_to_IDL2/be_util.h:

          New files containing a utility class
          of static methods.


        * tools/IDL3_to_IDL2/IDL3_to_IDL2.mpc:

          Added new files to project.

        * tools/IDL3_to_IDL2/be_global.cpp:
        * tools/IDL3_to_IDL2/be_global.h:

          Factored out methods that have nothing
          to do with global data storage and
          moved them to the new utility class.

Mon Jul 12 08:19:49 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/include/fe_utils.h:
        * TAO_IDL/include/ast_decl.h:
        * TAO_IDL/include/idl_global.h:
        * TAO_IDL/include/utl_scope.h:
        * TAO_IDL/include/ast_interface.h:
        * TAO_IDL/be/be_visitor_typecode/typecode_defn.cpp:
        * TAO_IDL/be/be_visitor_interface/any_op_ch.cpp:
        * TAO_IDL/be/be_visitor_interface/any_op_cs.cpp:
        * TAO_IDL/be/be_visitor_operation/upcall_command_ss.cpp:
        * TAO_IDL/be/be_codegen.cpp: